Various changes to accommodate larger displays

--- a/style.css
+++ b/style.css
@@ -168,11 +168,12 @@ nav {
     max-height: 100%;
     padding-bottom: 0.3rem !important;
     margin-top: 2rem;
+    overflow-x: scroll;
 }
 
 .media iframe {
-    width:32rem;
-    min-height: 18rem;
+    min-width:40rem;
+    min-height: 22.5rem;
 }
 
 .dark {
@@ -186,7 +187,7 @@ nav {
 }
 
 .dark .content {
-    margin-left: 9rem;
+    margin-left: 6rem;
     font-size: 1rem;
     font-family: 'Gothic A1';
     width: 100%;
@@ -215,7 +216,7 @@ nav {
     max-width: 95%;
     max-height: calc(100vh - 12rem);
     font-weight: 200;
-    font-size: 1rem;
+    font-size: 1.1rem;
     overflow:auto;
     overflow-x: hidden;
     padding-bottom: 0.3rem;
@@ -242,9 +243,8 @@ nav {
 
 .dark .contact p {
     display: block;
-    max-width: 70rem;
-    font-size: 1rem;
-    line-height: 1.8rem;
+    max-width: 80%;
+    font-size: 1.5rem;
     font-family: 'Gothic A1';
 }
 
@@ -264,16 +264,14 @@ nav {
 }
 
 .beside {
-    padding-left: 1.5rem;
-    padding-right: 1rem;
+    padding-right: 0.5rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .beside p {
-    font-size: 0.9rem;
-    
+    font-size: 1.1rem;
 }
 
 .award {
@@ -286,6 +284,7 @@ nav {
 
 .award p {
     min-width: 15%;
+    font-size: 1.1rem;
 }
 
 .light {
@@ -304,7 +303,7 @@ nav {
     justify-content: flex-start;
     align-items: flex-end;
     flex-direction: column;
-    margin-right: 9rem;
+    margin-right: 6rem;
     font-size: 1rem;
     font-family: 'Gothic A1';
     height: 100%;
